--- a/main.html
+++ b/main.html
@@ -6,6 +6,20 @@
 		<script src="metro.min.js"></script>
 		<script src="angular.min.js"></script>
 		<script src="controller.js"></script>
+		<style>
+		::-webkit-scrollbar { 
+		    display: none; 
+		}
+		hr{
+			margin:5px 0px !important;
+		}
+		.scriptr:hover{
+			border: 4px solid white;
+		}
+		*{
+			transition-duration:0.5s !important;
+		}
+		</style>
 	</head>
 
 	<body style="width:280px;" class="metro">
@@ -14,32 +28,100 @@
 		
 		<div ng-controller="info">
 			<hr>
-
+			<div class="listview">
+				<a href="#" class="list bg-green fg-white" ng-class="{'bg-green' : bol.version, 'bg-red' : !bol.version}">
+	                <div class="list-content">
+	                    <img src="bol.png" class="icon">
+	                    <div class="data">
+	                        <span class="list-title" style="font-size:20px;line-height:30px;">Bot of legends</span>
+	                        <span class="list-remark" style="font-size:15px;line-height:20px;">Updated for {{bol.version}}</span>
+	                    </div>
+	                </div>
+	            </a>
+            </div>
 		</div>
 
+		<div ng-controller="fastss">
+			<hr>
+			<div class="input-control text">
+			    <input type="text" placeholder="Search Champion Script" ng-model="champName"/>
+			</div>
+			<table class="table" ng-if="champName.length>0">
+                <thead>
+                <tr>
+                    <th class="text-left">Script Name</th>
+                    <th class="text-left">Author</th>
+                    <th class="text-left">Type</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                	<tr ng-repeat="script in scriptList" class="scriptr" ng-class="{'success' : script.status=='works', 'error' : script.status=='doesntwks','warning' : script.status=='partial'}" style="cursor:pointer;" ng-click="open(script.link)">
+                		<td>{{script.name}}</td>
+                		<td>{{script.author}}</td>
+                		<td>{{script.type}}</td>
+                	</tr>
+                    <tr>
+                    	<td colspan="3" style="text-align:center;">Powered By Script Status</span>
+                    </tr>
+				</tbody>
+			</table>
+        </div>
 		
 		<div ng-controller="settings">
 			<hr>
 			<div id='normal'>
-				<div class="input-control switch margin10" data-role="input-control">
+				<div class="input-control switch margin10" data-role="input-control" style="width:93%;" ng-click="set('openlink')">
 	                <div style="float:left;">
 		                <label>
-		                    Switch me
+		                    Show "Open Link" Button
 		                </label>
 	                </div>
-	                <div style="float:right;">
-		                <input type="checkbox" checked/>
+	                <div style="float:right;position: relative;top: 5px;">
+		                <input type="checkbox" ng-checked="settings.openlink"/>
 	                    <span class="check"></span>
 	            	</div>
 	            </div>
-
+	            <div class="input-control switch margin10" data-role="input-control" style="width:93%;" ng-click="set('pastebin')">
+	                <div style="float:left;">
+		                <label>
+		                    Edit Pastebin Links
+		                </label>
+	                </div>
+	                <div style="float:right;position: relative;top: 5px;">
+		                <input type="checkbox" ng-checked="settings.pastebin"/>
+	                    <span class="check"></span>
+	            	</div>
+	            </div>
+	            <div class="input-control switch margin10" data-role="input-control" style="width:93%;" ng-click="set('github')">
+	                <div style="float:left;">
+		                <label>
+		                    Edit Github Links
+		                </label>
+	                </div>
+	                <div style="float:right;position: relative;top: 5px;">
+		                <input type="checkbox" ng-checked="settings.github"/>
+	                    <span class="check"></span>
+	            	</div>
+	            </div>
+	            <div class="input-control switch margin10" data-role="input-control" style="width:93%;" ng-click="set('codebox')">
+	                <div style="float:left;">
+		                <label>
+		                    Edit Code Boxes
+		                </label>
+	                </div>
+	                <div style="float:right;position: relative;top: 5px;">
+		                <input type="checkbox" ng-checked="settings.codebox"/>
+	                    <span class="check"></span>
+	            	</div>
+	            </div>
 			</div>
 			<hr>
 			<div id='mod'>
 			
 			</div>
 		</div>
-
+		<center><a href="http://forum.botoflegends.com/topic/59187-utility-bol-chrome-extension/" target="_blank">Feedback Please</a><br><a style="font-weight: bold;color:#5F9F9F;">The Law</a></center>
 	</body>
 
 </html>
