--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
 			
 			</div>
 		</div>
-		<center><a href="http://forum.botoflegends.com/topic/59187-utility-bol-chrome-extension/" target="_blank">Feedback Please</a><br><a style="font-weight: bold;color:#5F9F9F;">The Law</a></center>
+		<center><a href="http://forum.botoflegends.com/topic/59187-utility-bol-chrome-extension/" target="_blank">Feedback Please</a><br><a href="http://forum.botoflegends.com/user/127916-the-law/" target="_blank" style="font-weight: bold;color:#5F9F9F;">The Law</a></center>
 	</body>
 
 </html>
