--- a/main.html
+++ b/main.html
@@ -39,12 +39,13 @@
 		<div ng-controller="info">
 			<hr>
 			<div class="listview">
-				<a href="#" class="list bg-green fg-white" ng-class="{'bg-green' : bol.version, 'bg-red' : !bol.version}">
+				<a href="#" class="list bg-green fg-white" ng-class="{'bg-green' : bol.status, 'bg-red' : !bol.status}">
 	                <div class="list-content">
 	                    <img src="bol.png" class="icon">
 	                    <div class="data">
 	                        <span class="list-title" style="font-size:20px;line-height:30px;">Bot of legends</span>
-	                        <span class="list-remark" style="font-size:15px;line-height:20px;">Updated for {{bol.version}}</span>
+	                        <span class="list-remark" ng-if="bol.status" style="font-size:15px;line-height:20px;" >Updated for {{bol.version}}</span>
+	                        <span class="list-remark" ng-if="!bol.status" style="font-size:15px;line-height:20px;" >Not updated for {{bol.version}}</span>
 	                    </div>
 	                </div>
 	            </a>
